# islam-intelligent

./: .env.example  .gitignore  AGENT.md  AGENTS.md  BUG_FIX_COMPLETE_REPORT.md  CODEBASE_ASSESSMENT.md  MILESTONE_1.md  Makefile  PROPOSAL.md  README.md  docker-compose.yml  opencode.jsonc
apps/api/: pyproject.toml  requirements.txt
apps/api/src/islam_intelligent/: __init__.py  config.py  cost_governance.py
apps/api/src/islam_intelligent/api/: __init__.py  main.py
apps/api/src/islam_intelligent/db/: __init__.py  engine.py
apps/api/src/islam_intelligent_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/tests/: conftest.py  test_api_contracts.py  test_async_pipeline.py  test_async_rag_architecture.py  test_citation_faithfulness_verifier.py  test_citation_verifier_hash_mismatch.py  test_citation_verifier_rejects_fabrication.py  test_cost_governance.py  test_faithfulness.py  test_hyde.py  test_ingest_hadith_api.py  test_integration.py  test_kg_edge_requires_evidence.py  test_kg_edge_requires_evidence_simple.py  test_lexical_retrieval.py  test_llm_fallback.py  test_normalization_nfc.py  test_observability_metrics.py  test_provenance.py  test_provenance_links.py  test_query_expander.py  test_rag_abstain_gate.py  test_rag_citation_required.py  test_rag_citation_verification.py  test_rag_pipeline_integration.py  test_rag_pipeline_unit.py  test_rag_retrieval.py  test_reranker.py  test_span_reject_invalid.py  test_span_roundtrip.py  test_text_unit_builder.py  test_untrusted_sources_abstain.py  test_vector_disabled.py  test_verify_license_gate.py
(+317 files in other folders)
