[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "islam-intelligent-api"
version = "0.1.0"
description = "Backend API scaffold for Islam Intelligent"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "sqlalchemy>=2.0",
    "pydantic>=2,<3",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
llm = [
    "openai>=1.0.0",
    "sentence-transformers>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
